# RV16

./: .clang-format  CMakeLists.txt  README.md
Docs/: license.md
Docs/Design/: ISA.md  InstructionEncoding.md
emulator/: CMakeLists.txt  main.cc
include/: elf-parser.h
lib/: CMakeLists.txt  elf-parser.cc
